--- a/mandelbulber2/formula/ui/difs_box_diagonal_v3.ui
+++ b/mandelbulber2/formula/ui/difs_box_diagonal_v3.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>difs_box_diagonal_v3</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>970</width>
-    <height>4095</height>
+    <height>5251</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -64,7 +64,7 @@
         <item>
          <widget class="QLabel" name="label_75">
           <property name="text">
-           <string>Start at iter. count =</string>
+           <string>start iteration=</string>
           </property>
           <property name="wordWrap">
            <bool>true</bool>
@@ -87,7 +87,7 @@
         <item>
          <widget class="QLabel" name="label_60">
           <property name="text">
-           <string>Stop at iter. count =</string>
+           <string>stop iteration=</string>
           </property>
           <property name="wordWrap">
            <bool>true</bool>
@@ -377,14 +377,14 @@
         <item row="0" column="1">
          <widget class="QLabel" name="label_281">
           <property name="text">
-           <string>Start at iteration:</string>
+           <string>start iteration=</string>
           </property>
          </widget>
         </item>
         <item row="0" column="2">
          <widget class="QLabel" name="label_282">
           <property name="text">
-           <string>Stop at iteration:</string>
+           <string>stop iteration=</string>
           </property>
          </widget>
         </item>
@@ -487,8 +487,15 @@
           </property>
          </widget>
         </item>
-        <item row="2" column="1" rowspan="2">
-         <widget class="MySpinBox" name="spinboxInt_transf_int_6">
+        <item row="2" column="0" rowspan="2">
+         <widget class="QLabel" name="label_45">
+          <property name="text">
+           <string>poly fold integer</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="2">
+         <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_P">
           <property name="enabled">
            <bool>false</bool>
           </property>
@@ -503,15 +510,8 @@
           </property>
          </widget>
         </item>
-        <item row="2" column="0" rowspan="2">
-         <widget class="QLabel" name="label_45">
-          <property name="text">
-           <string>poly fold integer</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="2">
-         <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_P">
+        <item row="2" column="1" rowspan="2" colspan="2">
+         <widget class="MySpinBox" name="spinboxInt_transf_int_6">
           <property name="enabled">
            <bool>false</bool>
           </property>
@@ -1087,7 +1087,7 @@
      <item>
       <widget class="QLabel" name="label_82">
        <property name="text">
-        <string>Start iter. count =</string>
+        <string>start iteration=</string>
        </property>
        <property name="wordWrap">
         <bool>true</bool>
@@ -1119,7 +1119,7 @@
      <item>
       <widget class="QLabel" name="label_68">
        <property name="text">
-        <string>Stop at iter. count =</string>
+        <string>stop iteration=</string>
        </property>
        <property name="wordWrap">
         <bool>true</bool>
@@ -1166,22 +1166,21 @@
        <number>2</number>
       </property>
       <item>
-       <layout class="QGridLayout" name="gridLayout_16" columnstretch="0,1,0,1">
-        <item row="1" column="2">
-         <widget class="QLabel" name="label_51">
+       <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,1,0,1">
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <item>
+         <widget class="QLabel" name="label_76">
           <property name="text">
-           <string>Stop at iteration:</string>
+           <string>start iteration=</string>
+          </property>
+          <property name="wordWrap">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
-        <item row="1" column="0">
-         <widget class="QLabel" name="label_66">
-          <property name="text">
-           <string>Start at iteration:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="1">
+        <item>
          <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_S">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -1189,15 +1188,31 @@
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
+          <property name="minimum">
+           <number>0</number>
+          </property>
           <property name="maximum">
            <number>999</number>
           </property>
+          <property name="value">
+           <number>0</number>
+          </property>
          </widget>
         </item>
-        <item row="1" column="3">
+        <item>
+         <widget class="QLabel" name="label_62">
+          <property name="text">
+           <string>stop iteration=</string>
+          </property>
+          <property name="wordWrap">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
          <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_S">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+           <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
@@ -1283,7 +1298,7 @@
            <item>
             <widget class="QLabel" name="label_74">
              <property name="text">
-              <string>Start at iter. count =</string>
+              <string>start iteration=</string>
              </property>
              <property name="wordWrap">
               <bool>true</bool>
@@ -1312,7 +1327,7 @@
            <item>
             <widget class="QLabel" name="label_59">
              <property name="text">
-              <string>Stop at iter. count =</string>
+              <string>stop iteration=</string>
              </property>
              <property name="wordWrap">
               <bool>true</bool>
@@ -1635,41 +1650,53 @@
        <number>2</number>
       </property>
       <item>
-       <layout class="QGridLayout" name="gridLayout_67">
-        <property name="spacing">
-         <number>2</number>
+       <layout class="QHBoxLayout" name="horizontalLayout_12" stretch="0,1,0,1">
+        <property name="topMargin">
+         <number>0</number>
         </property>
-        <item row="0" column="3">
-         <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_R">
+        <item>
+         <widget class="QLabel" name="label_83">
+          <property name="text">
+           <string>start iteration=</string>
+          </property>
+          <property name="wordWrap">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_R">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
+          <property name="minimum">
+           <number>0</number>
+          </property>
           <property name="maximum">
            <number>999</number>
           </property>
-         </widget>
-        </item>
-        <item row="0" column="0">
-         <widget class="QLabel" name="label_250">
-          <property name="text">
-           <string>Start at iteration:</string>
+          <property name="value">
+           <number>0</number>
           </property>
          </widget>
         </item>
-        <item row="0" column="2">
-         <widget class="QLabel" name="label_251">
+        <item>
+         <widget class="QLabel" name="label_69">
           <property name="text">
-           <string>Stop at iteration:</string>
+           <string>stop iteration=</string>
+          </property>
+          <property name="wordWrap">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
-        <item row="0" column="1">
-         <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_R">
+        <item>
+         <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_R">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+           <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
@@ -1841,7 +1868,7 @@
         <item>
          <widget class="QLabel" name="label_79">
           <property name="text">
-           <string>Start iter. count =</string>
+           <string>start iteration=</string>
           </property>
           <property name="wordWrap">
            <bool>true</bool>
@@ -1870,7 +1897,7 @@
         <item>
          <widget class="QLabel" name="label_64">
           <property name="text">
-           <string>Stop at iter. count =</string>
+           <string>stop iteration=</string>
           </property>
           <property name="wordWrap">
            <bool>true</bool>
@@ -2026,7 +2053,7 @@
         <item>
          <widget class="QLabel" name="label_80">
           <property name="text">
-           <string>Start iter. count =</string>
+           <string>start iteration=</string>
           </property>
           <property name="wordWrap">
            <bool>true</bool>
@@ -2055,7 +2082,7 @@
         <item>
          <widget class="QLabel" name="label_65">
           <property name="text">
-           <string>Stop at iter. count =</string>
+           <string>stop iteration=</string>
           </property>
           <property name="wordWrap">
            <bool>true</bool>
@@ -2134,7 +2161,7 @@
         <item>
          <widget class="QLabel" name="label_81">
           <property name="text">
-           <string>Start iter. count =</string>
+           <string>start iteration=</string>
           </property>
           <property name="wordWrap">
            <bool>true</bool>
@@ -2163,7 +2190,7 @@
         <item>
          <widget class="QLabel" name="label_67">
           <property name="text">
-           <string>Stop at iter. count =</string>
+           <string>stop iteration=</string>
           </property>
           <property name="wordWrap">
            <bool>true</bool>
