--- a/mandelbulber2/formula/ui/difs_sphere.ui
+++ b/mandelbulber2/formula/ui/difs_sphere.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>difs_sphere</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
@@ -175,14 +175,14 @@
         <item row="0" column="1">
          <widget class="QLabel" name="label_281">
           <property name="text">
-           <string>Start at iteration:</string>
+           <string>start iteration=</string>
           </property>
          </widget>
         </item>
         <item row="0" column="2">
          <widget class="QLabel" name="label_282">
           <property name="text">
-           <string>Stop at iteration:</string>
+           <string>stop iteration=</string>
           </property>
          </widget>
         </item>
@@ -952,7 +952,7 @@
         <item>
          <widget class="QLabel" name="label_66">
           <property name="text">
-           <string>Start Scale at iteration:</string>
+           <string>start iteration=</string>
           </property>
          </widget>
         </item>
@@ -978,7 +978,7 @@
         <item>
          <widget class="QLabel" name="label_51">
           <property name="text">
-           <string>Stop Scale at iteration:</string>
+           <string>stop iteration=</string>
           </property>
          </widget>
         </item>
@@ -1071,7 +1071,7 @@
            <item>
             <widget class="QLabel" name="label_74">
              <property name="text">
-              <string>Start vary iter. count =</string>
+              <string>start iteration=</string>
              </property>
              <property name="wordWrap">
               <bool>true</bool>
@@ -1100,7 +1100,7 @@
            <item>
             <widget class="QLabel" name="label_59">
              <property name="text">
-              <string>Stop vary at iter. count =</string>
+              <string>stop iteration=</string>
              </property>
              <property name="wordWrap">
               <bool>true</bool>
@@ -1366,7 +1366,7 @@
         <item>
          <widget class="QLabel" name="label_250">
           <property name="text">
-           <string>Start Rotation at iteration:</string>
+           <string>start iteration=</string>
           </property>
          </widget>
         </item>
@@ -1386,7 +1386,7 @@
         <item>
          <widget class="QLabel" name="label_251">
           <property name="text">
-           <string>Stop Rotation at iteration:</string>
+           <string>stop iteration=</string>
           </property>
          </widget>
         </item>
@@ -1558,7 +1558,7 @@
         <item>
          <widget class="QLabel" name="label_81">
           <property name="text">
-           <string>Start iter. count =</string>
+           <string>start iteration=</string>
           </property>
           <property name="wordWrap">
            <bool>true</bool>
@@ -1587,7 +1587,7 @@
         <item>
          <widget class="QLabel" name="label_67">
           <property name="text">
-           <string>Stop at iter. count =</string>
+           <string>stop iteration=</string>
           </property>
           <property name="wordWrap">
            <bool>true</bool>
@@ -1686,7 +1686,7 @@
         <item>
          <widget class="QLabel" name="label_80">
           <property name="text">
-           <string>Start iter. count =</string>
+           <string>start iteration=</string>
           </property>
           <property name="wordWrap">
            <bool>true</bool>
@@ -1715,7 +1715,7 @@
         <item>
          <widget class="QLabel" name="label_65">
           <property name="text">
-           <string>Stop at iter. count =</string>
+           <string>stop iteration=</string>
           </property>
           <property name="wordWrap">
            <bool>true</bool>
