Added size parameter for dIFSHexGrid. Cleaned up HexGrid calculation to be able to convert to OpenCL code. Updated OpenCL formula files and UI files.

--- a/mandelbulber2/formula/ui/difs_box_diagonal_v1.ui
+++ b/mandelbulber2/formula/ui/difs_box_diagonal_v1.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
+ <class>difs_box_diagonal_v1</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
